# simple-irc

./: Dockerfile  README.md  container
client/: CMakeLists.txt
client/src/: client_sess.c  client_sess.h  main.c
include/: client.h  defines.h  panic.h
server/: CMakeLists.txt
server/src/: command.c  command.h  main.c  server_sess.c  server_sess.h  socket.c  socket.h
